Add MySQL support alongside Postgres
The backend can now be built against either engine via Maven profile
(`./mvnw …` for Postgres, `./mvnw -Pmysql …` for MySQL). Each profile
bundles only its JDBC driver and stamps `app.dialect` /
`spring.profiles.active` onto surefire and spring-boot:run, so plain
`./mvnw -Pmysql spring-boot:run` Just Works. Engine-specific SQL goes
through a new `SqlDialect` strategy (epoch math, NULLS LAST,
COUNT FILTER rewrite); entities switched to explicit @Column names so
Hibernate's standard naming strategy preserves the upstream-uppercase
BATCH_* tables for case-sensitive MySQL.

Other changes pulled along:
- New AuthProperties (`app.auth.*`) — provider-agnostic OAuth2 attribute
  mapping plus optional `allowed-logins` allow-list rejected at the
  user-info loader before a session is created.
- Per-engine local profile YAMLs (`application-local-postgresql.yml`,
  `application-local-mysql.yml`) and matching `db/init-postgresql/` /
  `db/init-mysql/` initdb scripts; compose.yaml runs both DBs.
- TestcontainersConfiguration declares both containers gated on
  `app.dialect`; CI runs the suite as a [postgresql, mysql] matrix.
- Remove tracked Eclipse `bin/` build output; add `bin/` to gitignore.
- Set `m2e.apt.activation=jdt_apt` so the IDE stops emitting MapStruct
  stub classes that race Maven.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>