@@ -1,5 +1,6 @@
 package com.guavasoft.springbatch.dashboard.repository;
 
+import com.guavasoft.springbatch.dashboard.dialect.SqlDialect;
 import com.guavasoft.springbatch.dashboard.model.DurationSummary;
 import com.guavasoft.springbatch.dashboard.model.IoSummary;
 import com.guavasoft.springbatch.dashboard.model.JobExecutionStepCounts;
@@ -13,6 +14,7 @@ import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.Map;
 import lombok.RequiredArgsConstructor;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.jdbc.core.RowMapper;
 import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
@@ -64,6 +66,9 @@ public class StepExecutionRepositoryCustomImpl implements StepExecutionRepositor
     private static final String PARAM_SIZE = "size";
     private static final String PARAM_OFFSET = "offset";
 
+    private static final String START_COL = "se.start_time";
+    private static final String END_COL = "se.end_time";
+
     // Misc.
     private static final String TIMESTAMP_PATTERN = "yyyy-MM-dd HH:mm:ss";
     private static final String UNPARSEABLE_CONTEXT_KEY = "raw";
@@ -72,81 +77,36 @@ public class StepExecutionRepositoryCustomImpl implements StepExecutionRepositor
     private static final TypeReference<Map<String, Object>> MAP_TYPE = new TypeReference<>() { };
     private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper();
 
+    // Whitelist keyed by the public sort-field name; values are *raw column expressions*.
+    // The duration entry is rewritten to dialect-specific SQL at query-build time.
     private static final Map<String, String> STEP_SORT_EXPRESSIONS = Map.ofEntries(
             Map.entry(SORT_STEP_NAME, "se.step_name"),
             Map.entry(SORT_STATUS, "se.status"),
             Map.entry(SORT_READ_COUNT, "COALESCE(se.read_count, 0)"),
             Map.entry(SORT_WRITE_COUNT, "COALESCE(se.write_count, 0)"),
-            Map.entry(SORT_SKIP_COUNT, "COALESCE(se.read_skip_count, 0) + COALESCE(se.write_skip_count, 0) + COALESCE(se.process_skip_count, 0)"),
+            Map.entry(SORT_SKIP_COUNT,
+                "COALESCE(se.read_skip_count, 0) + COALESCE(se.write_skip_count, 0) + COALESCE(se.process_skip_count, 0)"),
             Map.entry(SORT_ROLLBACK_COUNT, "COALESCE(se.rollback_count, 0)"),
-            Map.entry(SORT_DURATION_SECONDS, "(se.end_time - se.start_time)"),
+            Map.entry(SORT_DURATION_SECONDS, SORT_DURATION_SECONDS),
             Map.entry(SORT_START_TIME, "se.start_time"),
             Map.entry(SORT_END_TIME, "se.end_time"));
 
-    private static final String STEP_COUNTS_SQL = """
-        SELECT
-            COUNT(*)                                          AS total,
-            COUNT(*) FILTER (WHERE status = 'COMPLETED')      AS completed,
-            COUNT(*) FILTER (WHERE status = 'FAILED')         AS failed,
-            COUNT(*) FILTER (WHERE status = 'STARTED')        AS active
-        FROM batch_step_execution
-        WHERE job_execution_id = :id
-        """;
-
-    private static final String IO_SUMMARY_SQL = """
-        SELECT COALESCE(SUM(read_count), 0)  AS read_total,
-               COALESCE(SUM(write_count), 0) AS write_total
-        FROM batch_step_execution
-        WHERE job_execution_id = :id
-        """;
-
-    private static final String DURATION_SUMMARY_SQL = """
-        SELECT COALESCE(SUM(EXTRACT(EPOCH FROM (end_time - start_time)))::bigint, 0) AS total_duration
-        FROM batch_step_execution
-        WHERE job_execution_id = :id
-          AND start_time IS NOT NULL
-          AND end_time IS NOT NULL
-        """;
-
-    private static final String STEP_DURATIONS_SQL = """
-        SELECT step_name,
-               COALESCE(EXTRACT(EPOCH FROM (end_time - start_time))::bigint, 0) AS duration_seconds
-        FROM batch_step_execution
-        WHERE job_execution_id = :id
-        ORDER BY start_time ASC NULLS LAST, step_execution_id ASC
-        """;
-
-    private static final String STEP_DETAILS_SQL = """
-        SELECT
-            se.step_execution_id                                                          AS id,
-            se.step_name                                                                  AS step_name,
-            se.status                                                                     AS status,
-            COALESCE(se.read_count, 0)                                                    AS read_count,
-            COALESCE(se.write_count, 0)                                                   AS write_count,
-            COALESCE(se.read_skip_count, 0) + COALESCE(se.write_skip_count, 0)
-                + COALESCE(se.process_skip_count, 0)                                      AS skip_count,
-            COALESCE(se.rollback_count, 0)                                                AS rollback_count,
-            COALESCE(EXTRACT(EPOCH FROM (se.end_time - se.start_time))::bigint, 0)        AS duration_seconds,
-            se.start_time                                                                 AS start_time,
-            se.end_time                                                                   AS end_time,
-            se.exit_code                                                                  AS exit_code,
-            se.exit_message                                                               AS exit_message,
-            ctx.short_context                                                             AS short_context
-        FROM batch_step_execution se
-        LEFT JOIN batch_step_execution_context ctx ON ctx.step_execution_id = se.step_execution_id
-        WHERE se.job_execution_id = :id
-        ORDER BY %s %s NULLS LAST, se.step_execution_id ASC
-        LIMIT :size OFFSET :offset
-        """;
-
-    private static final String COUNT_STEPS_SQL =
-            "SELECT COUNT(*) FROM batch_step_execution WHERE job_execution_id = :id";
-
     private final NamedParameterJdbcTemplate jdbc;
+    private final SqlDialect dialect;
 
     @Override
     public JobExecutionStepCounts countsByJobExecutionId(long jobExecutionId) {
-        return jdbc.queryForObject(STEP_COUNTS_SQL, params(jobExecutionId), (rs, i) -> new JobExecutionStepCounts(
+        // SUM(CASE WHEN ...) is portable across Postgres and MySQL; avoids COUNT(*) FILTER.
+        String sql = """
+            SELECT
+                COUNT(*)                                                  AS total,
+                SUM(CASE WHEN status = 'COMPLETED' THEN 1 ELSE 0 END)     AS completed,
+                SUM(CASE WHEN status = 'FAILED'    THEN 1 ELSE 0 END)     AS failed,
+                SUM(CASE WHEN status = 'STARTED'   THEN 1 ELSE 0 END)     AS active
+            FROM BATCH_STEP_EXECUTION
+            WHERE job_execution_id = :id
+            """;
+        return jdbc.queryForObject(sql, params(jobExecutionId), (rs, i) -> new JobExecutionStepCounts(
                 rs.getLong(COL_TOTAL),
                 rs.getLong(COL_COMPLETED),
                 rs.getLong(COL_FAILED),
@@ -155,28 +115,77 @@ public class StepExecutionRepositoryCustomImpl implements StepExecutionRepositor
 
     @Override
     public IoSummary ioSummaryByJobExecutionId(long jobExecutionId) {
-        return jdbc.queryForObject(IO_SUMMARY_SQL, params(jobExecutionId), (rs, i) ->
+        String sql = """
+            SELECT COALESCE(SUM(read_count), 0)  AS read_total,
+                   COALESCE(SUM(write_count), 0) AS write_total
+            FROM BATCH_STEP_EXECUTION
+            WHERE job_execution_id = :id
+            """;
+        return jdbc.queryForObject(sql, params(jobExecutionId), (rs, i) ->
                 new IoSummary(rs.getLong(COL_READ_TOTAL), rs.getLong(COL_WRITE_TOTAL)));
     }
 
     @Override
     public DurationSummary durationSummaryByJobExecutionId(long jobExecutionId) {
-        return jdbc.queryForObject(DURATION_SUMMARY_SQL, params(jobExecutionId), (rs, i) ->
+        String sql = """
+            SELECT %s AS total_duration
+            FROM BATCH_STEP_EXECUTION
+            WHERE job_execution_id = :id
+              AND start_time IS NOT NULL
+              AND end_time IS NOT NULL
+            """.formatted(dialect.sumDurationSeconds("start_time", "end_time"));
+        return jdbc.queryForObject(sql, params(jobExecutionId), (rs, i) ->
                 new DurationSummary(rs.getLong(COL_TOTAL_DURATION)));
     }
 
     @Override
     public List<StepDuration> stepDurationsByJobExecutionId(long jobExecutionId) {
-        return jdbc.query(STEP_DURATIONS_SQL, params(jobExecutionId), (rs, i) ->
+        String sql = """
+            SELECT step_name,
+                   %s AS duration_seconds
+            FROM BATCH_STEP_EXECUTION
+            WHERE job_execution_id = :id
+            ORDER BY %s, step_execution_id ASC
+            """.formatted(
+                dialect.durationSeconds("start_time", "end_time"),
+                dialect.orderByNullsLast("start_time", DIR_ASC));
+        return jdbc.query(sql, params(jobExecutionId), (rs, i) ->
                 new StepDuration(rs.getString(COL_STEP_NAME), rs.getLong(COL_DURATION_SECONDS)));
     }
 
     @Override
     public List<StepDetail> stepDetailsByJobExecutionId(long jobExecutionId, String sortBy, String sortDir, int page, int size) {
-        String expression = STEP_SORT_EXPRESSIONS.getOrDefault(sortBy, STEP_SORT_EXPRESSIONS.get(DEFAULT_SORT_FIELD));
+
+        String sortKey = STEP_SORT_EXPRESSIONS.containsKey(sortBy) ? sortBy : DEFAULT_SORT_FIELD;
+        String expression = SORT_DURATION_SECONDS.equals(sortKey)
+                ? dialect.durationSeconds(START_COL, END_COL)
+                : STEP_SORT_EXPRESSIONS.get(sortKey);
         String direction = DIR_ASC.equalsIgnoreCase(sortDir) ? DIR_ASC : DIR_DESC;
 
-        String sql = STEP_DETAILS_SQL.formatted(expression, direction);
+        String sql = """
+            SELECT
+                se.step_execution_id                                                          AS id,
+                se.step_name                                                                  AS step_name,
+                se.status                                                                     AS status,
+                COALESCE(se.read_count, 0)                                                    AS read_count,
+                COALESCE(se.write_count, 0)                                                   AS write_count,
+                COALESCE(se.read_skip_count, 0) + COALESCE(se.write_skip_count, 0)
+                    + COALESCE(se.process_skip_count, 0)                                      AS skip_count,
+                COALESCE(se.rollback_count, 0)                                                AS rollback_count,
+                %s                                                                            AS duration_seconds,
+                se.start_time                                                                 AS start_time,
+                se.end_time                                                                   AS end_time,
+                se.exit_code                                                                  AS exit_code,
+                se.exit_message                                                               AS exit_message,
+                ctx.short_context                                                             AS short_context
+            FROM BATCH_STEP_EXECUTION se
+            LEFT JOIN BATCH_STEP_EXECUTION_CONTEXT ctx ON ctx.step_execution_id = se.step_execution_id
+            WHERE se.job_execution_id = :id
+            ORDER BY %s, se.step_execution_id ASC
+            LIMIT :size OFFSET :offset
+            """.formatted(
+                dialect.durationSeconds(START_COL, END_COL),
+                dialect.orderByNullsLast(expression, direction));
 
         MapSqlParameterSource params = new MapSqlParameterSource()
                 .addValue(PARAM_ID, jobExecutionId)
@@ -188,7 +197,9 @@ public class StepExecutionRepositoryCustomImpl implements StepExecutionRepositor
 
     @Override
     public long countStepsByJobExecutionId(long jobExecutionId) {
-        Long count = jdbc.queryForObject(COUNT_STEPS_SQL, params(jobExecutionId), Long.class);
+        Long count = jdbc.queryForObject(
+                "SELECT COUNT(*) FROM BATCH_STEP_EXECUTION WHERE job_execution_id = :id",
+                params(jobExecutionId), Long.class);
         return count == null ? 0L : count;
     }
 
@@ -216,7 +227,7 @@ public class StepExecutionRepositoryCustomImpl implements StepExecutionRepositor
     }
 
     private Map<String, Object> parseContext(String shortContext) {
-        if (shortContext == null || shortContext.isBlank()) {
+        if (StringUtils.isBlank(shortContext)) {
             return Map.of();
         }
         try {
